# ShouChao

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  README_CN.md  pyproject.toml  requirements.txt  upload_pypi.bat  upload_pypi.sh
scripts/: generate_help_screenshots.py
shouchao/: __init__.py  __main__.py  api.py  app.py  cli.py  gui.py  i18n.py  tools.py
shouchao/core/: __init__.py  analyzer.py  briefing.py  config.py  converter.py  enhanced_fetcher.py  exporter.py  fetcher.py  github_trends.py  indexer.py  market_data.py  market_map.py  ollama_client.py  polisher.py  preprint.py  preprint_categories.py  rss.py  scheduler.py  search_fetcher.py  sources.py  storage.py  summarizer.py  tts.py  web_search.py  wechat_generator.py  workflow.py  writing_skill.py
shouchao/static/css/: style.css
shouchao/static/js/: analysis.js  app.js  briefing.js  i18n.js  news.js
shouchao/templates/: github_trends.html  index.html  index_complete.html  market_map.html
tests/: test_exporter.py  test_market_map.py  test_new_api.py  test_preprint.py  test_tts.py  test_unified_api.py  test_web_search.py
